--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "csv-parse": "^5.5.6",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
     "next-themes": "^0.2.1",
