--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@xyflow/react": "^12.3.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "csv-parse": "^5.5.6",
