--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     ],
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/react-flow/utils.js", "components/react-flow/FloatingConnectionLine.jsx", "components/react-flow/FloatingEdge.jsx"],
   "exclude": ["node_modules"]
 }
