--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "csv-parse": "^5.5.6",
+    "graph-data-structure": "^4.0.0",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
     "next-themes": "^0.2.1",
